--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>I'm confused</title>
+  <title>I'm confused!</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <button id="getRequestButton">Click Me!</button>
