--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <button id="getRequestButton">Click Me!</button>
+  <button id="getRequestButton">I'm confused!</button>
 
   <script>
     // Function to handle the button click event
